# pymultipleis

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.rst  LICENSE.md  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
data/her_50/: Y_50.npy  freq_50.npy  sigma_Y_50.npy
data/intercalation_50/: Z_50.npy  freq_50.npy  sigma_Z_50.npy
data/redox_100/: Z_100.npy  freq_100.npy  mod_Z_100.npy
data/redox_exp_50/: Y_50.npy  sigma_Y_50.npy
data/redox_sim_50/: Z_50.npy  freq_50.npy  mod_Z_50.npy
docs/: requirements.txt  requirements_docs.txt
docs/source/: FAQ.rst  conf.py  examples.rst  extra-resources.rst  how-it-works.rst  index.rst  pymultipleis.rst  quick-start-guide.rst  simultaneous-vs-sequential-fit.rst  troubleshooting.rst
docs/source/examples/: getting-started.ipynb  sequential-fit.ipynb  smoothing-factor-effect.ipynb
docs/source/examples/example_results/results/: example_results_Z_pred.npy  example_results_metrics.txt  example_results_perr.npy  example_results_popt.npy  fit_Z_pred.npy  fit_metrics.txt  fit_perr.npy  fit_popt.npy
pymultipleis.egg-info/: PKG-INFO  SOURCES.txt
src/pymultipleis/: __init__.py  multieis.py
tests/: test_multieis.py  test_pymultipleis.py  test_save_results.py
tests/test_data/redox_exp_50/: freq_50.npy
tests/test_results/results/: test_results_metrics.txt  test_results_perr.npy
