[project]
name = "pymultipleis"
version = "0.1.2"

[tool.poetry]
name = "pymultipleis"
version = "0.1.2"
description = ""
authors = ["Richard Chukwu <richinex@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "3.6.0"
scipy = "1.9.1"
pandas = "^1.5.0"
jax = "^0.3.17"
jaxopt = "^0.5"
numpy = "^1.23.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
ipykernel = "6.15.3"
flake8 = "5.0.4"
pre-commit = "2.20.0"
Sphinx = "5.1.1"
sphinx-rtd-theme = "1.0.0"
nbsphinx = "0.8.9"
sphinxcontrib-napoleon = "^0.7"
sphinxemoji = "0.2.0"
setuptools = "^65.4.1"
wheel = "^0.37.1"
twine = "^4.0.1"
build = "^0.8.0"

[build-system]
requires = ["setuptools>=65.4.1", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry.extras]
docs = ["toml"]

[project.urls]
"Homepage" = "https://github.com/richinex/pymultipleis"
"Bug Tracker" = "https://github.com/richinex/pymultipleis/issues"
"Documentation" = "https://pymultipleis.readthedocs.io/en/latest/index.html"