[tool.poetry]
name = "pymultipleis"
version = "0.2.5"
description="A library for fitting a sequence of electrochemical impedance spectra (JAX version)."
authors = ["Richard Chukwu <richinex@gmail.com>"]
license="MIT"
maintainers = [
    "Richard Chukwu <richinex@gmail.com>"
]
readme = "README.md"
homepage = "https://github.com/richinex/pymultipleis"
repository = "https://github.com/richinex/pymultipleis"
documentation = "https://pymultipleis.readthedocs.io/en/latest/index.html"
keywords = ["electrochemical impedance spectroscopy, batch fitting, multiple, jax"]
classifiers=[
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = ">= 3.8, < 3.11"
matplotlib = "3.6.0"
scipy = "1.9.1"
pandas = "^1.5.0"
jax = "^0.3.17"
jaxopt = "0.5.5"
numpy = "^1.23.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
ipykernel = "6.15.3"
flake8 = "5.0.4"
pre-commit = "2.20.0"
Sphinx = "5.1.1"
sphinx-rtd-theme = "1.0.0"
nbsphinx = "0.8.9"
sphinxcontrib-napoleon = "^0.7"
sphinxemoji = "0.2.0"
setuptools = "^65.4.1"
wheel = "^0.37.1"
build = "^0.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
docs = ["toml"]
